src/components/styles.css
h1{
  color:#0e124d;
}

p{
  color:#0e124d;
}

h2{
  color:#0e124d;
  font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
  font-weight: 700;
}
/* styles for the menu section */


.menu {
  display: flex;
  flex-direction: column;
  width: 250px; /* change this value to the collapsed width */
  align-items: center;
  position: fixed;
  top: 0;
  left: 0;
  bottom: 0;
  background-color: #1fffbc;
  transition: width 0.3s ease;
  overflow: auto;
}

.menu.collapsed {
  width: 80px;
}

.menu.collapsed .lessons {
  display: none;
}

.hidden {
  display: none;
}

.menu-hamburger {
  font-size: 24px;
  padding: 10px;
  cursor: pointer;
}

.level {
  position: relative;
  text-align: center;
  padding: 10px 0;
}

li{list-style: none;}
li.lesson:hover{background-color: #fff;border-radius: 5px;}

ul{padding-left:0px!important;}

.delete-lesson {
  margin-left:8px;
  cursor: pointer;
}

.delete-lesson:hover {
transform: scale(1.2);
}
  
 /* styles for the main content section */
 .main-content {
    display: flex;
    flex-direction: column;
    align-items:normal;
    padding-left: 60px; /* width of the collapsed menu */
    padding-top: 20px;
  }
  
  .edit-mode-toggle {
    margin-bottom: 10px;
  }
  
  .search-bar {
    margin: 8px;
  }

  .search-and-add-container {
    display: flex;
    justify-content: center;
    align-items: center;
    margin-bottom: 10px;
  }
  
.toggle-container {
    position: absolute;
    top: 20px;
    right: 20px;
    margin:auto;
    }
  
  .fa-toggle-off{
    cursor: pointer;
  }

  .fa-toggle-on{
    cursor: pointer;
  }

  #edit-tag{
    margin-right: 4px;
    font-size:x-small;
  }

  .add-lesson {
    margin-left: 10px;
    margin-right: 20px;
    border-color: #f1f1f1;
    cursor: pointer;
  }
  
   .search-result{
    width: 100%;
    text-align: center;
    padding: 8px;
   }
  .search-result:hover{
   cursor: pointer;
   background-color:#edf7ff;
   font-weight: 600;
  }

  .level-button {
    background-color: #0e124d;
    border-radius: 50%;
    width: 32px;
    height: 32px;
    display: flex;
    align-items: center;
    justify-content: center;
    font-weight: bold;
    color: #fff;
    margin: 0 auto;
    cursor: pointer;
    border: none;
  } 

  .level-button:hover{
    background-color: #4827ec;
  }
  
/* modal styles */

.modal {
  display: flex;
  justify-content: center;
  align-items: center;
  position: fixed;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  background-color: rgba(0, 0, 0, 0.5);
}

.form-wrapper {
  display: flex;
  flex-direction: column;
}

.header {
  display: flex;
  justify-content: space-between;
  align-items: center;
}

.form-group {
  margin-bottom: 1rem;
}

.form-label {
  display: block;
  margin-bottom: 0.5rem;
}

.form-input {
  width: 100%;
  padding: 0.5rem;
  border: 1px solid #ccc;
  border-radius: 4px;
}

.form-container {
  display: flex;
  flex-direction: column;
}

.form-container label {
  margin-top: 10px;
  margin-bottom: 5px;
}

.form-container input[type='text'],
.form-container textarea {
  margin-bottom: 10px;
}

.quill{
  background-color: white;
}

.loading-icon {
  display: flex;
  justify-content: center;
  align-items: center;
  /* Add any other styles as needed */
}

/* more form styles */
.formTitle{
  font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
  font-weight: 700;
}

.formDescription{
  font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
  font-weight: 700;
}

.formLevel{
  font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
  font-weight: 700;
}



 /* flexbox styles for the app */ 
 .App {
  display: flex;
  height: 100vh;
  width: 100%;
  overflow: hidden;
}

.app-body {
  display: flex;
  flex-grow: 1;
  height: 100%;
}

.main-content {
  flex-grow: 1;
  padding: 20px;
  overflow-y: auto;
  margin-left:6rem;
}

